--- a/wysiwyg.css
+++ b/wysiwyg.css
@@ -7,12 +7,12 @@ img{
   width: 30%;
 }
 
-.person_container:nth-of-type(2n){
-  background-color: lightyellow;
+.person-container{
+  background-color: lightblue;
 }
 
-.person_container:nth-of-type(2n+1){
-  background-color: lightblue;
+.person-container:nth-child(even){
+  background-color: lightyellow;
 }
 
 .border{
